# SynapseBuildDeployWheel

./: .gitignore  README.md  pyproject.toml  pytest-7.1.3-py3-none-any.whl  setup.py
.github/actions/PSaction/: NEWtest copy.ps1  action.yml  test.ps1
.github/actions/old_original_action/: action.yml
.github/actions/synapse_build_deploy_wheel_action/: SynapseBuildWheelScript.py  action.yml
.github/workflows/: PSSynapseBuildDeployWheel copy.yml  SynapseBuildDeployWheel.yml
My_Setup_File.egg-info/: PKG-INFO  SOURCES.txt
myapp/: main.py
